@@ -56,6 +56,7 @@ import sleeper.statestore.StateStoreException;
 
 import java.io.IOException;
 import java.nio.file.Path;
+import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -65,6 +66,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
+import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 
@@ -115,34 +117,30 @@ public class S3StateStoreIT {
         return tableName;
     }
 
-    private StateStore getStateStore(Schema schema,
-                                     List<Partition> partitions,
-                                     int garbageCollectorDelayBeforeDeletionInSeconds) throws IOException, StateStoreException {
+    private S3StateStore getStateStore(Schema schema,
+                                       List<Partition> partitions,
+                                       int garbageCollectorDelayBeforeDeletionInMinutes) throws IOException, StateStoreException {
         String bucket = createTempDirectory(folder, null).toString();
         String dynamoTableName = createDynamoTable();
-        S3StateStore stateStore = new S3StateStore("", 5, bucket, dynamoTableName, schema, garbageCollectorDelayBeforeDeletionInSeconds, dynamoDBClient, new Configuration());
+        S3StateStore stateStore = new S3StateStore("", 5, bucket, dynamoTableName, schema, garbageCollectorDelayBeforeDeletionInMinutes, dynamoDBClient, new Configuration());
         stateStore.initialise(partitions);
         return stateStore;
     }
 
-    private StateStore getStateStore(Schema schema,
-                                     List<Partition> partitions) throws IOException, StateStoreException {
+    private S3StateStore getStateStore(Schema schema,
+                                       List<Partition> partitions) throws IOException, StateStoreException {
         return getStateStore(schema, partitions, 0);
     }
 
-    private StateStore getStateStoreFromSplitPoints(Schema schema, List<Object> splitPoints, int garbageCollectorDelayBeforeDeletionInSeconds) throws IOException, StateStoreException {
-        return getStateStore(schema, new PartitionsFromSplitPoints(schema, splitPoints).construct(), garbageCollectorDelayBeforeDeletionInSeconds);
-    }
-
-    private StateStore getStateStoreFromSplitPoints(Schema schema, List<Object> splitPoints) throws IOException, StateStoreException {
+    private S3StateStore getStateStoreFromSplitPoints(Schema schema, List<Object> splitPoints) throws IOException, StateStoreException {
         return getStateStore(schema, new PartitionsFromSplitPoints(schema, splitPoints).construct(), 0);
     }
 
-    private StateStore getStateStore(Schema schema, int garbageCollectorDelayBeforeDeletionInSeconds) throws IOException, StateStoreException {
-        return getStateStoreFromSplitPoints(schema, Collections.EMPTY_LIST, garbageCollectorDelayBeforeDeletionInSeconds);
+    private S3StateStore getStateStore(Schema schema, int garbageCollectorDelayBeforeDeletionInMinutes) throws IOException, StateStoreException {
+        return getStateStore(schema, new PartitionsFromSplitPoints(schema, Collections.emptyList()).construct(), garbageCollectorDelayBeforeDeletionInMinutes);
     }
 
-    private StateStore getStateStore(Schema schema) throws IOException, StateStoreException {
+    private S3StateStore getStateStore(Schema schema) throws IOException, StateStoreException {
         return getStateStoreFromSplitPoints(schema, Collections.EMPTY_LIST);
     }
 
@@ -401,35 +399,35 @@ public class S3StateStoreIT {
         }
 
         // When
-        for (int i = 0; i < 20; i++) {
-            final FileInfo fileInfo = files.get(i);
-            executorService.execute(() -> {
-                try {
-                    stateStore.addFile(fileInfo);
-                } catch (StateStoreException e) {
-                    e.printStackTrace();
-                }
-            });
-        }
-        Thread.sleep(5000L);
+        CompletableFuture.allOf(files.stream()
+                .map(file -> (Runnable) () -> {
+                    try {
+                        stateStore.addFile(file);
+                    } catch (StateStoreException e) {
+                        e.printStackTrace();
+                    }
+                })
+                .map(runnable -> CompletableFuture.runAsync(runnable, executorService))
+                .toArray(CompletableFuture[]::new)
+        ).join();
 
         // Then
-        List<FileInfo> activeFiles = stateStore.getActiveFiles();
-        int retries = 0;
-        while (activeFiles.size() < 20 && retries < 5) {
-            Thread.sleep(3000L);
-            retries++;
-            activeFiles = stateStore.getActiveFiles();
-        }
-        assertThat(activeFiles).hasSize(20).containsExactlyInAnyOrderElementsOf(files);
+        assertThat(stateStore.getActiveFiles())
+                .hasSize(20)
+                .containsExactlyInAnyOrderElementsOf(files);
         executorService.shutdown();
     }
 
     @Test
     public void testGetFilesThatAreReadyForGC() throws IOException, InterruptedException, StateStoreException {
         // Given
+        Instant file1Time = Instant.parse("2023-06-06T15:00:00Z");
+        Instant file2Time = Instant.parse("2023-06-06T15:01:00Z");
+        Instant file3Time = Instant.parse("2023-06-06T15:02:00Z");
+        Instant file1GCTime = Instant.parse("2023-06-06T15:05:30Z");
+        Instant file3GCTime = Instant.parse("2023-06-06T15:07:30Z");
         Schema schema = schemaWithKeyAndValueWithTypes(new IntType(), new StringType());
-        StateStore stateStore = getStateStore(schema, 5);
+        S3StateStore stateStore = getStateStore(schema, 5);
         Partition partition = stateStore.getAllPartitions().get(0);
         //  - A file which should be garbage collected immediately
         FileInfo fileInfo1 = FileInfo.builder()
@@ -440,7 +438,7 @@ public class S3StateStoreIT {
                 .minRowKey(Key.create(1))
                 .maxRowKey(Key.create(100))
                 .numberOfRecords(100L)
-                .lastStateStoreUpdateTime(System.currentTimeMillis() - 8000)
+                .lastStateStoreUpdateTime(file1Time)
                 .build();
         stateStore.addFile(fileInfo1);
         //  - An active file which should not be garbage collected
@@ -452,7 +450,7 @@ public class S3StateStoreIT {
                 .minRowKey(Key.create(1))
                 .maxRowKey(Key.create(100))
                 .numberOfRecords(100L)
-                .lastStateStoreUpdateTime(System.currentTimeMillis())
+                .lastStateStoreUpdateTime(file2Time)
                 .build();
         stateStore.addFile(fileInfo2);
         //  - A file which is ready for garbage collection but which should not be garbage collected now as it has only
@@ -465,18 +463,19 @@ public class S3StateStoreIT {
                 .minRowKey(Key.create(1))
                 .maxRowKey(Key.create(100))
                 .numberOfRecords(100L)
-                .lastStateStoreUpdateTime(System.currentTimeMillis())
+                .lastStateStoreUpdateTime(file3Time)
                 .build();
         stateStore.addFile(fileInfo3);
 
         // When 1
+        stateStore.fixTime(file1GCTime);
         Iterator<FileInfo> readyForGCFilesIterator = stateStore.getReadyForGCFiles();
 
         // Then 1
         assertThat(readyForGCFilesIterator).toIterable().containsExactly(fileInfo1);
 
         // When 2
-        Thread.sleep(9000L);
+        stateStore.fixTime(file3GCTime);
         readyForGCFilesIterator = stateStore.getReadyForGCFiles();
 
         // Then 2
@@ -871,7 +870,7 @@ public class S3StateStoreIT {
         // Given
         Schema schema = schemaWithSingleRowKeyType(new ByteArrayType());
         byte[] min = new byte[]{1, 2, 3, 4};
-        List<Partition> partitions = new PartitionsFromSplitPoints(schema, Arrays.asList(min))
+        List<Partition> partitions = new PartitionsFromSplitPoints(schema, List.of(min))
                 .construct();
         StateStore stateStore = getStateStore(schema, partitions);
 
